Add auth headers for event upload (#207)
